Revert "use java-version: 17"
This reverts commit 63a8c9044ca18ccba6ec5804ae9469374ebd5cc0.